# preprocessor

./: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  package.yaml
.run/: Run GUI.run.xml  Run UI.run.xml  Run.run.xml
appicon/: cambiomed-fish-icon.ai  generate.sh  preprocessor.icns
docs/: convert-ui-files.md  pycharm-run-configuration.md  restore-window-geometry.md  troubleshooting.md
scripts/: detect1.py
src/preprocessor/: __init__.py  __main__.py  hello_world.py  hello_world.qml  main.py  main_window.py  mywindow.py  utils.py
src/preprocessor/gui/: about_dialog.py  dock1.ui  editor_dock.ui  editor_dock_widget.py  export_dialog.py  export_dialog.ui  hsv_threshold.ui  hsv_threshold_model.py  hsv_threshold_params.py  hsv_threshold_widget.py  icons.py  image_editor.py  launch_dialog.py  launch_dialog.ui  main.ui  main_window.py  main_window.ui  main_window2.py  main_window_model.py  mainwindow.ui  photo_editor_widget.py  project_settings_dialog.py  project_settings_dialog.ui  properties_dock.py  properties_dock.ui  properties_dock_model.py  properties_dock_widget.py  properties_dock_with_model.py  quadrat_detection.py  thumbnail_dock_widget.py  thumbnail_list_model.py  thumbnail_list_widget.py  ui.py  ui_editor_dock.py  ui_export_dialog.py  ui_hsv_threshold.py  ui_launch_dialog.py  ui_loader.py  ui_main.py  ui_main_window.py  (+6 more)
src/preprocessor/model/: __init__.py  application_model.py  camera_model.py  list_model.py  metadata_model.py  model.py  photo_model.py  project_model.py  qlistmodel.py  qmodel.py
src/preprocessor/processing/: detect_quadrat.py  fix_lens_distortion.py  fix_perspective.py  json.py  load_image.py  params.py  preprocessing_result.py  save_image.py  undistort.py
tests/: preprocessor.py  test_example.py  test_integration_gui.py
tests/models/: test_application_model.py  test_list_model.py  test_photo_model.py  test_project_model.py
tests/preprocessor/: test_integration_gui.py
tests/preprocessor/models/: test_metadata_model.py  test_photo_model.py  test_project_model.py
