[project]
dynamic = ["version", "urls"]

name = "preprocessor"
description = "Benthic image preprocessor"
keywords = ["preprocessor"]

license = "Apache-2.0"
license-files = ["LICENSE.md"]
readme = "README.md"

authors = [
  { name = "Daniel A. A. Pelsmaeker", email = "developer@pelsmaeker.net" },
]
maintainers = [
  { name = "Daniel A. A. Pelsmaeker", email = "developer@pelsmaeker.net" },
]

requires-python = ">=3.12,<4.0"
dependencies = [
  "click>=8.3.0",
  "opencv-contrib-python>=4.12.0.88",
  "pillow>=12.0.0",
  "pyside6>=6.10.0",
  "qimage2ndarray>=1.10.0",
]
[dependency-groups]
dev = [
  "hatch>=1.15.1",
  "hatch-vcs>=0.5.0",
  "hatchling>=1.27.0",
  # For PyCharm 'Show as Image'
  "mypy>=1.18.2",
  "numpy>=2.2.6",
  "pillow>=12.0.0",
  "pyright>=1.1.406",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.2",
  "yamlfix>=1.19.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/preprocessor/_version.py"

[tool.hatch.build.targets.wheel]
packages = [
  "src/preprocessor"
]

# See: https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://cambiomed-biodiversa.com/"
Source = "https://github.com/CAMBioMed/preprocessor/"
"Source Archive" = "https://github.com/CAMBioMed/preprocessor/archive/{commit_hash}.zip"

# CLI launcher
[project.scripts]
preprocessor = "preprocessor.main:main"

# For Windows GUI launcher (no console)
[project.gui-scripts]
preprocessor-gui = "preprocessor.main:main_gui"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["preprocessor"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "YTT",         # flake8-2020
  "ANN",         # flake8-annotations
  "B",           # flake8-bugbear
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "EXE",         # flake8-executable
  "ISC",         # flake8-implicit-str-concat
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PIE",         # flake8-pie
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "SIM",         # flake8-simplify
  "ARG",         # flake8-unused-arguments
  "E", "W",      # pycodestyle
  "F",           # Pyflakes
  "D",           # pydocstyle
  "PL",          # pylint
  "UP",          # pyupgrade
  "RUF",         # Ruff-specific
]
ignore = [
  # Stylistic choices
  "PLR",        # Pylint/Refactor
  "RET504",     # unnecessary-assign
  # Ensure formatter compatibility
  "E203",       # whitespace-before-punctuation
  # Allow gradual documentation
  "D100",       # undocumented-public-module
  "D101",       # undocumented-public-class
  "D102",       # undocumented-public-method
  "D103",       # undocumented-public-nested-class
  "D104",       # undocumented-public-package
  "D105",       # undocumented-magic-method
  "D106",       # undocumented-public-nested-class
  "D107",       # undocumented-public-init
  "D205",       # missing-blank-line-after-summary
]
pydocstyle.convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "D103",   # Missing docstring
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
]

[tool.yamlfix]
line_length = 120
sequence_style = "keep_style"
explicit_start = false
whitelines = 1
section_whitelines = 1

#[tool.hatch.build.hooks.pyside]
##[tool.hatch.build.targets.wheel.hooks.pyside]
#folders = ["."]

[tool.pyside6-project]
files = [
    "src/preprocessor/main.py",   # Required. Otherwise, error: "Python file with main function not found."
    # List all UI files here, use Qt Creator to edit them
    "src/preprocessor/gui/properties_dock.ui",
]
