[project]
dynamic = ["version", "urls"]
name = "preprocessor"
description = "Benthic image preprocessor"
keywords = ["preprocessor"]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
readme = "README.md"
authors = [
  {name = "Daniel A. A. Pelsmaeker", email = "developer@pelsmaeker.net"},
]
maintainers = [
  {name = "Daniel A. A. Pelsmaeker", email = "developer@pelsmaeker.net"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
  "click>=8.3.1",
  "numpy>=2.2.6",
  "opencv-contrib-python>=4.12.0.88",
  "pillow>=12.0.0",
  "pyside6>=6.10.1",
  "qimage2ndarray>=1.10.0",
  "scikit-learn>=1.7.2",
]

# CLI launcher
[project.scripts]
preprocessor = "preprocessor.main:main"

# For Windows GUI launcher (no console)
[project.gui-scripts]
preprocessor-gui = "preprocessor.main:main_gui"

[dependency-groups]
dev = [
  "hatch>=1.16.1",
  "hatch-vcs>=0.5.0",
  "hatchling>=1.28.0",
  # For PyCharm 'Show as Image'
  "mypy>=1.19.0",
  "pillow>=12.0.0",
  "pyright>=1.1.406",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.7",
  "yamlfix>=1.19.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/preprocessor/_version.py"

[tool.hatch.build.targets.wheel]
packages = [
  "src/preprocessor",
]

# See: https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://cambiomed-biodiversa.com/"
Source = "https://github.com/CAMBioMed/preprocessor/"
"Source Archive" = "https://github.com/CAMBioMed/preprocessor/archive/{commit_hash}.zip"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["preprocessor"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [
    "ui_*.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-annotations
  "ANN",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # flake8-errmsg
  "EM",
  # flake8-executable
  "EXE",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-import-conventions
  "ICN",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-pytest-style
  "PT",
  # flake8-return
  "RET",
  # flake8-simplify
  "SIM",
  # flake8-unused-arguments
  "ARG",
  "E",
  # pycodestyle
  "W",
  # Pyflakes
  "F",
  # pydocstyle
  "D",
  # pylint
  "PL",
  # pyupgrade
  "UP",
  # Ruff-specific
  "RUF",
]
ignore = [
  # Stylistic choices
  # Pylint/Refactor
  "PLR",
  # unnecessary-assign
  "RET504",
  # Ensure formatter compatibility
  # whitespace-before-punctuation
  "E203",
  # Allow gradual documentation
  # undocumented-public-module
  "D100",
  # undocumented-public-class
  "D101",
  # undocumented-public-method
  "D102",
  # undocumented-public-nested-class
  "D103",
  # undocumented-public-package
  "D104",
  # undocumented-magic-method
  "D105",
  # undocumented-public-nested-class
  "D106",
  # undocumented-public-init
  "D107",
  # missing-blank-line-after-summary
  "D205",
  # For now:
  # logging-f-string
  "G004",
]
pydocstyle.convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    # Missing return type annotation for public function
    "ANN201",
    # Missing docstring
    "D103",
    # Use of assert is detected
    "S101",
    # Missing __init__.py file
    "INP001",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.yamlfix]
line_length = 120
sequence_style = "keep_style"
explicit_start = false
whitelines = 1
section_whitelines = 1

[tool.pyside6-project]
files = [
    "src/preprocessor/gui/mainwindow.ui",
    "src/preprocessor/gui/properties_dock.ui",
    "src/preprocessor/main.py",
]
